[project]
name = "awesome-exams"
version = "0.1.0"
description = ""
authors = [
    {name = "Certseeds",email = "51754303+Certseeds@users.noreply.github.com"}
]
license = {text = "CC BY-NC-SA 4.0 or later"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "jupyterlab (>=4.3.6,<5.0.0)",
    "notebook (>=7.3.3,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
